--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/style-extension-1.css">
+    <!-- <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-extension-1.css"> -->
+
+    <link rel="stylesheet" href="css/style-main.css">
+    <link rel="stylesheet" href="css/style-breakpoints.css">
 
     <link rel="stylesheet" type="text/css"
         href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
@@ -144,12 +147,12 @@
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 wow fadeInUp"
                     data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/4baefCu.png" alt>
+                        <img src="https://i.imgur.com/5I39ojc.png" alt>
                         <div class="hover-content">
                             <h4>Train Delays Checker V3</h4>
                             <a class="info" href="worksbynrfz/delays-checker.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
-                            <a href="https://i.imgur.com/4baefCu.png" class="portfolio-img"><i
+                            <a href="https://i.imgur.com/5I39ojc.png" class="portfolio-img"><i
                                     class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
