--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -120,12 +120,12 @@
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wd mb-30 wow fadeInUp" data-wow-delay="100ms">
                     <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/4baefCu.png" alt="tdc-v2">
+                        <img src="https://i.imgur.com/5I39ojc.png" alt="tdc-v2">
                         <div class="hover-content">
                             <h4>Train Delays Checker V3</h4>
                             <a class="info" href="worksbynrfz/delays-checker.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
-                            <a href="https://i.imgur.com/4baefCu.png" class="portfolio-img"><i
+                            <a href="https://i.imgur.com/5I39ojc.png" class="portfolio-img"><i
                                     class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
