--- a/worksbynrfz/delays-checker.html
+++ b/worksbynrfz/delays-checker.html
@@ -69,7 +69,7 @@
   </header>
 
 
-  <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(https://i.imgur.com/4baefCu.png)">
+  <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(https://i.imgur.com/5I39ojc.png)">
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-12">
@@ -96,7 +96,7 @@
         <div class="col-lg-12">
           <div class="main-title">
             <span>Line Status Overview</span>
-            <h1>Train Delays Checker V3 </h1>
+            <h1>Train Delays Checker</h1>
           </div>
         </div>
 
@@ -124,9 +124,9 @@
               </a>
             </div>
           </div>
-          <div class="single_catagory">
-            <a class="btn wbnrfz_btn" href="https://nurafianzulkifli.github.io/train-delays-checker-v3/"
-              target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp;Train Delays Checker V3</a>
+          <div class="single_catagory text-center">
+            <a class="btn wbnrfz_btn" href="https://nurafianzulkifli.github.io/train-delays-checker/"
+              target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp; View Website</a>
           </div>
         </div>
       </div>
@@ -165,14 +165,14 @@
               <div class="row">
                 <div class="col-lg-6 col-md-6">
                   <div class="thumb">
-                    <a href="https://i.imgur.com/Hfz9sVw.png" class="portfolio-img"><img
-                        src="https://i.imgur.com/Hfz9sVw.png" class="img-fluid" alt="web-2"></a>
+                    <a href="https://i.imgur.com/XcpMF3q.png" class="portfolio-img"><img
+                        src="https://i.imgur.com/XcpMF3q.png" class="img-fluid" alt="web-2"></a>
                   </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
                   <div class="thumb">
-                    <a href="https://i.imgur.com/5SxD36w.png" class="portfolio-img"><img
-                        src="https://i.imgur.com/5SxD36w.png" class="img-fluid" alt="web-3"></a>
+                    <a href="https://i.imgur.com/4z7CP8j.png" class="portfolio-img"><img
+                        src="https://i.imgur.com/4z7CP8j.png" class="img-fluid" alt="web-3"></a>
                   </div>
                 </div>
               </div>
