--- a/worksbynrfz/igra3.html
+++ b/worksbynrfz/igra3.html
@@ -124,7 +124,7 @@
               </a>
             </div>
           </div>
-          <div class="single_catagory">
+          <div class="single_catagory text-center">
             <a href="https://drive.google.com/file/d/1JAwwdZ1DZtpb1xlRrICBFnGwgZeQSGi3/view?usp=sharing"
             class="btn wbnrfz_btn" target="_blank"><i class="fa-solid fa-file-pdf"></i>&nbsp;View PDF Version</a>
           </div>
