--- a/worksbynrfz/delays-checker.html
+++ b/worksbynrfz/delays-checker.html
@@ -18,6 +18,7 @@
 
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/style-breakpoints.css">
+  <link rel="stylesheet" href="../css/dark-mode.css">
 
   <link rel="stylesheet" href="../css/swiper-bundle.min.css">
   <link rel="stylesheet" href="../css/glightbox.min.css">
@@ -57,7 +58,8 @@
                   <li><a href="../about.html">About</a></li>
                   <li class="active"><a href="../works-by-nrfz.html">Works by NRFZ</a></li>
                   <li><a href="../blog.html">Blog</a></li>
-
+                  <li><button class="wbnrfz_btn_theme" id="dark-mode-toggle"><i class="fa-solid fa-moon"></i></button>
+                  </li>
                 </ul>
               </div>
 
@@ -125,8 +127,8 @@
             </div>
           </div>
           <div class="single_catagory text-center">
-            <a class="btn wbnrfz_btn" href="https://nurafianzulkifli.github.io/train-delays-checker/"
-              target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp; View Website</a>
+            <a class="btn wbnrfz_btn" href="https://nurafianzulkifli.github.io/train-delays-checker/" target="_blank"><i
+                class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp; View Website</a>
           </div>
         </div>
       </div>
@@ -135,7 +137,7 @@
     </div>
   </section>
 
-  <section class="about-me-summ bg-gray section-padding-80-0 clearfix">
+  <section class="about-me-summ section-padding-80-0 clearfix">
     <div class="wbnrfz_details wow fadeInUp" data-wow-delay="100ms">
       <div class="container">
         <div class="row justify-content-center">
@@ -215,6 +217,8 @@
     data-bg="#f2f3e5" data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
     data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
     </script>
+
+  <script src="../js/theme.js"></script>
 
   <script src="../js/jquery.min.js"></script>
 
