--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                                     <li class="active"><a href="./index.html">Home</a></li>
                                     <li><a href="./about.html">About</a></li>
                                     <li><a href="./works-by-nrfz.html">Works By NRFZ</a></li>
+                                    <li><a href="./eicw.html">EICW</a></li>
                                     <li><a href="./blog.html">Blog</a></li>
                                     <li><button class="wbnrfz_btn_theme" id="dark-mode-toggle"
                                             title="Toggle Dark/Light Mode!"><i class="fa-solid fa-moon"></i></button>
