--- a/works-by-nrfz copy.html
+++ b/works-by-nrfz copy.html
@@ -12,16 +12,16 @@
   <meta content="" name="keywords">
   <meta property="og:image" content="https://i.imgur.com/kMi3VsK.png" />
 
-  <link rel="icon" href="img/core-img/favicon.png">
+  <link rel="icon" href="../img/core-img/favicon.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/style-breakpoints.css">
-  <link rel="stylesheet" href="css/dark-mode.css">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/style-breakpoints.css">
+  <link rel="stylesheet" href="../css/dark-mode.css">
 
-  <link rel="stylesheet" href="css/swiper-bundle.min.css">
-  <link rel="stylesheet" href="css/glightbox.min.css">
+  <link rel="stylesheet" href="../css/swiper-bundle.min.css">
+  <link rel="stylesheet" href="../css/glightbox.min.css">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-WN76281P3Q"></script>
@@ -49,7 +49,7 @@
 
           <nav class="classy-navbar justify-content-between" id="pwNav">
 
-            <a class="nav-brand img-logo" href="index.html"><img class="logo-img" src="img/core-img/logo.png"
+            <a class="nav-brand img-logo" href="../index.html"><img class="logo-img" src="../img/core-img/logo.png"
                 alt></a>
 
             <div class="classy-navbar-toggler">
@@ -64,10 +64,10 @@
 
               <div class="classynav">
                 <ul id="nav">
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="about.html">About</a></li>
-                  <li class="active"><a href="works-by-nrfz.html">Works By NRFZ</a></li>
-                  <li><a href="blog.html">Blog</a></li>
+                  <li><a href="../index.html">Home</a></li>
+                  <li><a href="../about.html">About</a></li>
+                  <li class="active"><a href="../works-by-nrfz.html">Works By NRFZ</a></li>
+                  <li><a href="../blog.html">Blog</a></li>
                   <li><button class="wbnrfz_btn_theme" id="dark-mode-toggle" title="Toggle Dark/Light Mode!"><i
                         class="fa-solid fa-moon"></i></button>
                   </li>
@@ -83,85 +83,79 @@
 
 
 
-
-
-  <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-about"
-  style="background-image: url(img/bg-img/hero-bg-small.png); height: 100vh;">
-  <div class="wbnrfz_details wow fadeIn" data-wow-delay="100ms">
-    <div class="container">
-      <div class="col-lg-12">
-        <div class="main-title">
-          <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/index.html"> Home</a>
-              </li>
-              <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/works-by-nrfz.html"> Works By NRFZ
-                </a>
-              </li>
-            </ol>
-          </nav>
-          <h1>Works By NRFZ</h1>
+  <section class="wbnrfz-summ clearfix">
+    <div class="wbnrfz_details wow fadeInUp" data-wow-delay="100ms">
+      <div class="container">
+        <div class="col-lg-12">
+          <div class="main-title">
+            <nav aria-label="breadcrumb">
+              <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/index.html"> Home</a>
+                </li>
+                <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/works-by-nrfz.html"> Works By NRFZ
+                  </a>
+                </li>
+              </ol>
+            </nav>
+            <h1>Works by NRFZ</h1>
+          </div>
         </div>
-      </div>
 
-      <div class="details_catagory_wrap">
-        <div class="col-sm-3 single_catagory ">
-          <span>Category</span>
-          <h4>Website Design</h4>
-        </div>
-        <div class="col-sm-3 single_catagory">
-          <span>Project Year</span>
-          <h4>2023/2024</h4>
-        </div>
-        <div class="col-sm-3 single_catagory">
-          <span>Share Project</span>
-          <div class="social_links">
-            <a href="https://www.facebook.com/sharer/sharer.php?u=https://nurafianzulkifli.com/worksbynrfz/bp12.html"
-              title="Facebook">
-              <i class="fa-brands fa-facebook"></i> </a>
-            <a href="https://x.com/intent/post?url=https://nurafianzulkifli.com/worksbynrfz/bp12.html&text= New Wayfinding System for BP12 Jelapang"
-              title="X (Twitter)">
-              <i class="fa-brands fa-x-twitter"></i></a>
-            <a href="#" class="clipboard" onclick="copyToClipboard()" title="Copy Link"><i
-                class="fa-solid fa-link"></i>
-              <p class="clipboard-copied" style="font-size: 12px;"></p>
-            </a>
+        <div class="details_catagory_wrap">
+          <div class="col-sm-3 single_catagory ">
+            <span>Category</span>
+            <h4>Website Design</h4>
+          </div>
+          <div class="col-sm-3 single_catagory">
+            <span>Project Year</span>
+            <h4>2023/2024</h4>
+          </div>
+          <div class="col-sm-3 single_catagory">
+            <span>Share Project</span>
+            <div class="social_links">
+              <a href="https://www.facebook.com/sharer/sharer.php?u=https://nurafianzulkifli.com/worksbynrfz/bp12.html"
+                title="Facebook">
+                <i class="fa-brands fa-facebook"></i> </a>
+              <a href="https://x.com/intent/post?url=https://nurafianzulkifli.com/worksbynrfz/bp12.html&text= New Wayfinding System for BP12 Jelapang"
+                title="X (Twitter)">
+                <i class="fa-brands fa-x-twitter"></i></a>
+              <a href="#" class="clipboard" onclick="copyToClipboard()" title="Copy Link"><i
+                  class="fa-solid fa-link"></i>
+                <p class="clipboard-copied" style="font-size: 12px;"></p>
+              </a>
+            </div>
           </div>
         </div>
       </div>
+      <div class="row">
+        <div class="col-12">
+
+            <div class="pw-projects-menu wow fadeInUp" data-wow-delay="100ms">
+                <div class="portfolio-menu text-center">
+                    <button class="btn active" data-filter="*">All Projects</button>
+                    <button class="btn" data-filter=".wd">Designs</button>
+                    <button class="btn" data-filter=".cr">Mockups</button>
+                    <button class="btn" data-filter=".id">Infographics</button>
+                    <button class="btn" data-filter=".md">Mockup Designs</button>
+                    <button class="btn" data-filter=".ld">Logos</button>
+                    <button class="btn" data-filter=".ii">Innovations</button>
+                </div>
+            </div>
+        </div>
     </div>
+    </div>
+    </div>
+  </section>
 
-    <div class="container">
-      <div class="portfolio-controls">
-          <!-- Filter Buttons -->
-          <div class="portfolio-filter">
-              <button class="btn active" data-filter="*">All</button>
-              <button class="btn" data-filter=".wd">Designs</button>
-              <button class="btn" data-filter=".cr">Mockups</button>
-              <button class="btn" data-filter=".id">Infographics</button>
-              <button class="btn" data-filter=".md">Mockup Designs</button>
-              <button class="btn" data-filter=".ld">Logos</button>
-          </div>
-
-          <!-- Sort Dropdown -->
-          <div class="portfolio-sort">
-              <label for="sort-options">Sort By:</label>
-              <select id="sort-options">
-                  <option value="newest">Newest</option>
-                  <option value="oldest">Oldest</option>
-                  <option value="alphabetical">Alphabetical</option>
-              </select>
-          </div>
-      </div>
-  </div>
-
+  <section class="breadcrumb-area-eicw-cover bg-img parallax" id="cv-img"
+  style="background-image: url(img/bg-img/hero-bg-small.png)">
+  <div class="container h-100">
+    <div class="row h-100 align-items-center">
+    </div>
   </div>
 </section>
 
-
-
   <section class="about-me-summ section-padding-80-0 clearfix">
-  
     <div class="pw-portfolio-area section-padding-80 clearfix">
       <div class="container-fluid">
           <div class="row pw-portfolio">
@@ -447,32 +441,32 @@
     </div>
   </footer>
 
-  <script type="text/javascript" id="cookiebanner" src="js/cookies-banner.js" data-position="bottom"
+  <script type="text/javascript" id="cookiebanner" src="../js/cookies-banner.js" data-position="bottom"
     data-bg="#f2f3e5" data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
     data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
     </script>
 
-  <script src="js/theme.js"></script>
+  <script src="../js/theme.js"></script>
 
-  <script src="js/jquery.min.js"></script>
+  <script src="../js/jquery.min.js"></script>
 
-  <script src="js/popper.min.js"></script>
+  <script src="../js/popper.min.js"></script>
 
-  <script src="js/bootstrap.min.js"></script>
+  <script src="../js/bootstrap.min.js"></script>
 
-  <script src="js/pw.bundle.js"></script>
+  <script src="../js/pw.bundle.js"></script>
 
-  <script src="js/default-assets/active.js"></script>
+  <script src="../js/default-assets/active.js"></script>
 
-  <script src="js/swiper-bundle.min.js"></script>
+  <script src="../js/swiper-bundle.min.js"></script>
 
-  <script src="js/glightbox.min.js"></script>
+  <script src="../js/glightbox.min.js"></script>
 
-  <script src="js/isotope.pkgd.min.js"></script>
+  <script src="../js/isotope.pkgd.min.js"></script>
 
-  <script src="js/portFunct.js"></script>
+  <script src="../js/portfolio-comp.js"></script>
 
-  <script src="js/copy-to-clipboard.js"></script>
+  <script src="../js/copy-to-clipboard.js"></script>
 
 
 </body>
